--- a/front-react/package.json
+++ b/front-react/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "firebase": "^7.24.0",
     "react": "^16.14.0",
