--- a/front-react/package.json
+++ b/front-react/package.json
@@ -13,8 +13,10 @@
     "react-dom": "^16.6.3",
     "react-dropzone-component": "^3.2.0",
     "react-dropzone-uploader": "^2.11.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "reactstrap": "^8.7.0",
     "recompose": "^0.30.0",
     "rsuite": "^4.8.4",
     "semantic-ui-react": "^2.0.1"
