--- a/front-react/package.json
+++ b/front-react/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.14.0",
     "react-dropzone-component": "^3.2.0",
     "react-dropzone-uploader": "^2.11.0",
+    "react-firebase-hooks": "^2.2.0",
     "react-flexbox-grid": "^2.1.2",
     "react-icons": "^3.11.0",
     "react-native": "^0.63.3",
